kube/deploy/infra/storage/minio/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-api
spec:
  routes:
    - match: Host(`s3.${DOMAIN_PUBLIC}`)
      kind: Rule
      services:
        - name: minio
          port: 9000
  tls:
    domains:
      - main: "s3.${DOMAIN_PUBLIC}"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-admin
spec:
  routes:
    - match: Host(`minio.${DOMAIN_PUBLIC}`)
      kind: Rule
      services:
        - name: minio
          port: 9001
  tls:
    domains:
      - main: "minio.${DOMAIN_PUBLIC}"
